--- a/Task_Manager/appsettings.json
+++ b/Task_Manager/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=.;Database=Task;Trusted_Connection=True;TrustServerCertificate=True;"
+    }
 }
