--- a/Task_Manager/appsettings.json
+++ b/Task_Manager/appsettings.json
@@ -8,5 +8,8 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=.;Database=Task;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+    "ApiSettings": {
+        "SecretKey": "This is the secret key and it has to be very long that is why i am increasing the length of this sentence"
     }
 }
